--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
   </head>
   <body>
 
-    <h1>My First Website</h1>
-    <p>My first paragraph.</p>
+    <h1>Mozilla is cool</h1>
+
+    <img src="images/firefox-icon.png" alt="My test image">
+
+    <p>At Mozilla, we’re a global community of</p>
+    
+<ul> 
+  <li>technologists</li>
+  <li>thinkers</li>
+  <li>builders</li>
+</ul>
+
+<p>working together ... </p>
+<a href="">Mozilla Manifesto</a>
+
 
   </body>
 </html>
